force-app/main/default/objects/Referral__c/fields/Automated_Audit__c.field-meta.xml
<CustomField>
    <fullName>Automated_Audit__c</fullName>
    <formula>IF(
AND(
OR(  
   Created_date__c &lt;= Referred_Friend_First_Purchase_Date__c, 
   ISBLANK(Referred_Friend_First_Purchase_Date__c)),
   Referred_friend_email__c &lt;&gt; Customer_email__c),
   
&quot;Eligible&quot;,&quot;Not Eligible&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automated Audit</label>
    <type>Text</type>
</CustomField>