force-app/main/default/objects/Referral__c/fields/Customer_email__c.field-meta.xml
<CustomField>
    <fullName>Customer_email__c</fullName>
    <formula>Referring_Customer__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referring Customer Email</label>
    <type>Text</type>
</CustomField>