force-app/main/default/objects/Referral__c/fields/Manual_Referring_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Manual_Referring_Customer_Email__c</fullName>
    <inlineHelpText>Field to be populated for each incoming referral. Used for manual contact creation</inlineHelpText>
    <label>Manual Referring Customer Email</label>
    <type>Email</type>
</CustomField>