force-app/main/default/objects/Referral__c/fields/Payment_Sent__c.field-meta.xml
<CustomField>
    <fullName>Payment_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Sent</label>
    <type>Checkbox</type>
</CustomField>