force-app/main/default/objects/Referral__c/fields/Referred_Friend_Account__c.field-meta.xml
<CustomField>
    <fullName>Referred_Friend_Account__c</fullName>
    <formula>Referred_Customer__r.Account.Account_Name_Hyperlink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred Friend Account</label>
    <type>Text</type>
</CustomField>