force-app/main/default/objects/Referral__c/fields/Referred_Friend_First_Opp_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Referred_Friend_First_Opp_Creation_Date__c</fullName>
    <formula>Referred_Customer__r.Account.First_Revenue_Oppty_Creation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred Friend First Opp Creation Date</label>
    <type>Date</type>
</CustomField>