force-app/main/default/objects/Referral__c/fields/Referred_Friend_s__c.field-meta.xml
<CustomField>
    <fullName>Referred_Friend_s__c</fullName>
    <formula>Referred_Customer__r.Days_post_first_purchase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred Friend Days Post First Purchase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>