force-app/main/default/objects/Referral__c/fields/Referring_Customer_SAM_Number__c.field-meta.xml
<CustomField>
    <fullName>Referring_Customer_SAM_Number__c</fullName>
    <label>Referring Customer SAM Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>