force-app/main/default/objects/Referral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Referral_Date__c</columns>
    <columns>Referral_status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Referral_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Created_date__c</field>
        <operation>greaterThan</operation>
        <value>3/16/2021</value>
    </filters>
    <label>All</label>
</ListView>